# fastapi-another-jwt-auth

./: pyproject.toml
fastapi_another_jwt_auth/: config.py
