[tool.poetry]
name = "fastapi-another-jwt-auth"
version = "0.1.8"
description = ""
authors = ["Mariusz Masztalerczuk <mariusz@masztalerczuk.com>", "Nyoman Pradipta Dewantara <nyomanpradipta120@gmail.com>"]
license = "MIT"
repository = "https://github.com/GlitchCorp/fastapi-another-jwt-auth"
readme = "README.md"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
PyJWT = "^2.4.0"
fastapi = ">=0.101.1"
cryptography = ">=39.0.2,<42.0.0"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
requests = "^2.31.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
